Change wording and remove children from formular

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                     fröhlich und unvergesslich wird wie unsere gemeinsame Zeit. Keine steife Etikette, 
                     kein Stress – bringt einfach gute Laune mit und lasst uns zusammen einen großartigen Tag verbringen!
                     Wir können es kaum erwarten, mit euch anzustoßen, zu tanzen und diesen besonderen Moment mit 
-                    unseren liebsten Menschen zu teilen. 💕🥂
-                    Bist du dabei?
-                    Falls ja, dann gebe uns mit dem Formular <a href="#rsvp">unten</a> Bescheid. Wir freuen uns auf dich!
+                    unseren Liebsten zu teilen. 💕🥂
+                    Du bist dabei?
+                    Dann gib uns mit dem Formular <a href="#rsvp">unten</a> Bescheid. Wir freuen uns auf Dich!
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/we2.png" class="wp2"></div>
@@ -160,45 +160,46 @@
             <p><strong>29. August 2026</strong></p>
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <h5>Ankunft <span class="time">13:00 Uhr - 13:30 Uhr</span></h5>
-                    <p>Vor der freien Trauung heißen wir euch herzlich mit einem kleinen Pre-Wedding Empfang willkommen.
-                        Bitte schaut, dass ihr rechtzeitig da seid, da wir um 14 Uhr mit der Trauung starten möchten :).</p>
+                    <h5>Ankunft ab <span class="time">13 Uhr</span></h5>
+                    <p>Vor der freien Trauung heißen wir Euch herzlich mit einem kleinen Pre-Wedding Empfang willkommen.
+                        Bitte seid rechtzeitig da, damit wir pünktlich ab 14 Uhr mit der freien Trauung starten können.</p>
                 </div>
                 <div class="wp5">
-                    <h5>Freie Trauung <span class="time">14:00 Uhr - 14:45 Uhr</span></h5>
-                    <p>Wir freuen uns, diesen besonderen Moment mit euch an einem idyllischen Teich feiern zu dürfen. 
-                        Umgeben von sanftem Wasser, grüner Natur und einer angenehmen Brise geben wir uns das Ja-Wort. 
-                        Sollte die Sonne an diesem Tag besonders strahlen, bietet uns der leichte Schatten ein angenehmes 
-                        Plätzchen für eine feierliche und entspannte Zeremonie.</p>
+                    <h5>Freie Trauung <span class="time">14 Uhr</span></h5>
+                    <p>Wir freuen uns, diesen besonderen Moment mit Euch an einem idyllischen Teich feiern zu dürfen. 
+                        Umgeben von sanftem Wasser, sanfter Natur und angenehmer Brise geben wir uns das Ja-Wort. 
+                        Sollte die Sonne an unserem Tag besonders strahlen, werden wir für ausreichen Beschattung sorgen.
+                        Dennoch empfehlen wir Sonnenschutz einzupacken.
+                    </p>
                 </div>
                 <div class="wp4">
-                    <h5>Sektempfang <span class="time">15:00 Uhr - 16:00 Uhr</span></h5>
-                    <p>Nach der Trauung möchten wir diesen glücklichen Moment mit euch gebührend feiern. 
-                        Wir laden euch herzlich zu einem Sektempfang ein, begleitet von Canapés. 
+                    <h5>Sektempfang <span class="time">15 Uhr - 16 Uhr</span></h5>
+                    <p>Nach der Trauung möchten wir diesen glücklichen Moment mit Euch gebührend feiern. 
                         Stoßt mit uns an, genießt die besondere Atmosphäre und lasst uns gemeinsam diesen unvergesslichen Tag beginnen.
                     </p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
-                    <h5>Kaffee & Kuchen <span class="time">16:00 Uhr - 17:30 Uhr</span></h5>
+                    <h5>Kaffee & Kuchen <span class="time">16 Uhr - 17:30 Uhr</span></h5>
                     <p>Nach der feierlichen Trauung und dem ersten Anstoßen möchten wir den Nachmittag mit euch in entspannter Atmosphäre genießen. 
                         Dazu gibt es duftenden Kaffee und eine liebevolle Auswahl an köstlichen Kuchen.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Hochzeitsdinner <span class="time">17:30 Uhr - 19:00 Uhr</span></h5>
-                    <p>Nach einem wunderschönen Tag in der Parkanlage erwartet euch ein stilvolles Dinner im Hochzeitspavillion.
-                        Das Dinner besteht aus einem 3-Gänge-Menü. Lasst uns im Formular unten wissen, falls ihr bestimmte Bedürfnisse habt.
+                    <h5>Dinner ab <span class="time">17:30 Uhr</span></h5>
+                    <p>Nach einem wunderschönen Tag in der Parkanlage erwartet Euch ein stilvolles Dinner im Hochzeitspavillion.
+                        Unser Dinner besteht aus einem 3-Gänge-Menü. 
+                        Im Formular unten könnt Ihr uns individuelle Ernährungsbedürfnisse mitteilen.
                     </p>
                 </div>
                 <div class="wp6">
-                    <h5>Party! <span class="time">19:00 Uhr - 00:00 Uhr</span></h5>
-                    <p>Nachdem wir gemeinsam einen unvergesslichen Tag erlebt haben, wird es Zeit, 
-                        die Tanzfläche zu erobern! Am Abend möchten wir mit euch ausgelassen feiern, 
-                        lachen und unvergessliche Erinnerungen schaffen. Freut euch auf gute Musik, kühle Drinks und eine großartige Stimmung,
-                        denn was wäre ein Hochzeitstag ohne eine gebührende Party?
-                        Lasst uns diesen besonderen Tag mit viel Freude, Liebe und natürlich jeder Menge 
-                        Tanz ausklingen lassen! Wir können es kaum erwarten, mit euch zu feiern! 🥂🎶
+                    <h5>Party! <span class="time">19 Uhr - 0 Uhr</span></h5>
+                    <p>Nachdem der letzte Happen verzehrt und die Hochzeitsreden gehalten wurden, wird es Zeit, die Tanzfläche zu erobern.
+                        Wir möchten ausgelassen mit Euch feiern, lachen und einmalige Erinnerungen schaffen.
+                        
+                        Freut Euch auf gute Musik, kühle Drinks und eine großartige Stimmung!
+                        Lasst uns unseren besonderen Tag mit viel Freude, Liebe und natürlich Euren besten Tanzmoves ausklingen lassen.
+                        Wir können es kaum erwarten! 🥂🎶
                     </p>
                 </div>
             </div>
@@ -222,13 +223,13 @@
                     <p>
                         <strong>Festlich, aber entspannt 🎩👗</strong>
                         <br>
-                        Wir freuen uns, wenn ihr diesen besonderen Tag mit uns feiert – 
-                        ganz gleich, was ihr tragt! Wer sich inspirieren lassen möchte: 
+                        Wir freuen uns, wenn Ihr diesen besonderen Tag mit uns feiert – 
+                        ganz gleich, was Ihr tragt! Wer sich inspirieren lassen möchte: 
                         Ein klassisch-eleganter Look passt perfekt zu unserer Feier. 
                         Wir lieben folgende Farbtöne... 
                         <img src="img/color_plate.jpeg" alt="" style="max-width: 100%; height: auto; display: block; margin-top: 3%; margin-bottom: 3%;"/>
-                        ...doch das ist nur eine Anregung – das Wichtigste ist, dass ihr euch 
-                        wohlfühlt und den Tag mit uns genießt!
+                        ...doch das ist nur eine Anregung. Das Wichtigste ist, dass ihr Euch 
+                        wohlfühlt und dabei seid!
                     </p>
                 </div>
             </div><!-- /.modal-content -->
@@ -492,24 +493,30 @@
         <h5>Was ist, wenn es regnet?</h5>
         <p>
             Sollte es regnen, wird die Trauung und der Empfang in einem kleinen, 
-            aber liebevoll gestalteten Nebenhäuschen stattfinden. 
-            Das Pavillon ist wetterfest, somit sind das Dinner und die Party nicht gefährdet.
+            aber liebevoll gestalteten Nebengebäude stattfinden. 
+            Das Pavillon für das Abendprogramm ist wetterfest.
         </p>
         <h5>Kann ich übernachten?</h5>
         <p>
-            Ja! Wir haben eine reservierte Anzahl an Zimmern. 
-            Damit es genügend Schlafplätze für alle gibt, gebt uns bitte bei der Anmeldung Bescheid, 
-            ob ihr übernachten möchtet. Am nächsten Morgen wird ein kleines Frühstück zubereitet.
+            Auf jeden Fall. Wir haben einige Doppelzimmer direkt im Hotel auf Gut Altholz reserviert.
+            Bitte gebt uns bald Bescheid, wenn Ihr eines davon buchen möchtet. Ein kleines Frühstück ist inbegriffen.
+            Wir freuen uns, Euch am nächsten Morgen zu sehen!
             <br>
-            Die Preise und Zimmerdetails findest du <a href="https://gut-altholz.de/hotel/">hier</a>.
+            Die Preise und Zimmerdetails findet Ihr <a href="https://gut-altholz.de/hotel/">hier</a>.
         </p>
         <h5>Gibt es Parkplätze?</h5>
         <p>
             Das Anwesen bietet genügend kostenlose Parkplätze für alle Gäste.
         </p>
-        <h5>Kann ich eine Begleitung mitnehmen?</h5>
+        <h5>Kann ich mehrere Personen eintragen?</h5>
         <p>
-            Selbstverständlich! Bitte trage das im Formular unten ein.
+            Selbstverständlich! Bitte informiere uns über das Formular unten, wenn Du eine Begleitung (+1) mitbringen möchtest.
+            Bei Familien reicht es natürlich, wenn eine Person die ganze Familie einträngt.
+        </p>
+        <h5>Was soll ich schenken?</h5>
+        <p>
+            Wir möchten es Euch leicht machen.
+            Da wir uns eine Hochzeitsreise nach Japan wünschen, freuen wir uns über einen kleinen Beitrag.
         </p>
 
     </div>
@@ -577,9 +584,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Auf was wartest du noch?</h2>
-                <p>Wir würden uns sehr freuen, wenn du vor vor dem 1. November 2025 antworten kannst.</p>
-                <p>Ihr müsst euch nicht alle einzeln anmelden. Gebt einfach die Anzahl der Begleitpersonen an..</p>
+                <h2>Auf was wartest Du noch?</h2>
+                <p>Wir würden uns sehr freuen, wenn Du bis zum 31.12.2025 antworten könntest.</p>
+                <p>Ihr müsst Euch nicht alle einzeln anmelden. Gebt einfach die Anzahl der Begleitpersonen an.</p>
+                <p>Etwas ist unklar? Wir sind erreichbar:<br>
+                    Nadine 0171 9066209<br>
+                    Manuel 0176 42960187
+                </p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -607,18 +618,12 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i><input name="plusone" class="" type="number" min="0" max="6"
-                                                                     placeholder="Begleitung? (Anzahl)"
+                                                                     placeholder="Begleitung oder Familie?"
                                                                      required>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-users"></i><input name="children" class="" type="number" min="0" max="4"
-                                                                  placeholder="Kinder? (Anzahl)">
-                            </div>
-                        </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i><input name="mail" class="" type="email"
