Add placeholder tip

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i><input name="plusone" class="" type="number" min="0" max="6"
-                                                                     placeholder="Begleitung oder Familie?"
+                                                                     placeholder="Begleitung oder Familie? (Anzahl)"
                                                                      required>
                             </div>
                         </div>
