Change header color and typos

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Nadine & Manuel heiraten!</title>
-    <meta name="description" content="Wir möchten euch zu unserer Hochzeit einladen.">
+    <meta name="description" content="Wir möchten Euch zu unserer Hochzeit einladen.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Nadine & Manuel heiraten!">
-    <meta property="og:description" content="Wir möchten euch zu unserer Hochzeit einladen.">
+    <meta property="og:description" content="Wir möchten Euch zu unserer Hochzeit einladen.">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -130,11 +130,11 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/we.png" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    Seit 2018 gehen wir gemeinsam durchs Leben – jetzt wird’s offiziell! 
-                    Wir laden euch herzlich ein, mit uns eine freie Trauung zu feiern, die genauso locker, 
+                    Seit 2018 gehen wir gemeinsam durchs Leben – jetzt wird's offiziell! 
+                    Wir laden Euch herzlich ein, mit uns eine freie Trauung zu feiern, die genauso locker, 
                     fröhlich und unvergesslich wird wie unsere gemeinsame Zeit. Keine steife Etikette, 
                     kein Stress – bringt einfach gute Laune mit und lasst uns zusammen einen großartigen Tag verbringen!
-                    Wir können es kaum erwarten, mit euch anzustoßen, zu tanzen und diesen besonderen Moment mit 
+                    Wir können es kaum erwarten, mit Euch anzustoßen, zu tanzen und diesen besonderen Moment mit 
                     unseren Liebsten zu teilen. 💕🥂
                     Du bist dabei?
                     Dann gib uns mit dem Formular <a href="#rsvp">unten</a> Bescheid. Wir freuen uns auf Dich!
@@ -170,6 +170,9 @@
                         Umgeben von sanftem Wasser, sanfter Natur und angenehmer Brise geben wir uns das Ja-Wort. 
                         Sollte die Sonne an unserem Tag besonders strahlen, werden wir für ausreichen Beschattung sorgen.
                         Dennoch empfehlen wir Sonnenschutz einzupacken.
+
+                        Für eine entspannte Zeremonie würden wir Euch bitten, die Handys in der Tasche zu lassen. Unsere 
+                        Fotografin Ina wird den Moment für uns alle einfangen.
                     </p>
                 </div>
                 <div class="wp4">
@@ -182,7 +185,7 @@
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
                     <h5>Kaffee & Kuchen <span class="time">16 Uhr - 17:30 Uhr</span></h5>
-                    <p>Nach der feierlichen Trauung und dem ersten Anstoßen möchten wir den Nachmittag mit euch in entspannter Atmosphäre genießen. 
+                    <p>Nach der feierlichen Trauung und dem ersten Anstoßen möchten wir den Nachmittag mit Euch in entspannter Atmosphäre genießen. 
                         Dazu gibt es duftenden Kaffee und eine liebevolle Auswahl an köstlichen Kuchen.</p>
                 </div>
                 <div class="wp6">
