--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
                     Wir laden Euch herzlich ein, mit uns eine freie Trauung zu feiern, die genauso locker, 
                     fröhlich und unvergesslich wird wie unsere gemeinsame Zeit. Keine steife Etikette, 
                     kein Stress – bringt einfach gute Laune mit und lasst uns zusammen einen großartigen Tag verbringen!
-                    Wir können es kaum erwarten, mit Euch anzustoßen, zu tanzen und diesen besonderen Moment mit 
-                    unseren Liebsten zu teilen. 💕🥂
+                    Wir können es kaum erwarten, zusammen anzustoßen, zu tanzen und diesen besonderen Moment mit 
+                    Euch zu teilen. 💕🥂
+                    <br>
                     Du bist dabei?
                     Dann gib uns mit dem Formular <a href="#rsvp">unten</a> Bescheid. Wir freuen uns auf Dich!
                 </p>
@@ -160,16 +161,16 @@
             <p><strong>29. August 2026</strong></p>
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <h5>Ankunft ab <span class="time">13 Uhr</span></h5>
+                    <h5>Ankunft <span class="time">ab 13 Uhr</span></h5>
                     <p>Vor der freien Trauung heißen wir Euch herzlich mit einem kleinen Pre-Wedding Empfang willkommen.
                         Bitte seid rechtzeitig da, damit wir pünktlich ab 14 Uhr mit der freien Trauung starten können.</p>
                 </div>
                 <div class="wp5">
                     <h5>Freie Trauung <span class="time">14 Uhr</span></h5>
                     <p>Wir freuen uns, diesen besonderen Moment mit Euch an einem idyllischen Teich feiern zu dürfen. 
-                        Umgeben von sanftem Wasser, sanfter Natur und angenehmer Brise geben wir uns das Ja-Wort. 
-                        Sollte die Sonne an unserem Tag besonders strahlen, werden wir für ausreichen Beschattung sorgen.
-                        Dennoch empfehlen wir Sonnenschutz einzupacken.
+                        Umgeben von Natur und angenehmer Brise geben wir uns das Ja-Wort. 
+                        Sollte die Sonne an unserem Tag besonders strahlen, werden wir für ausreichend Beschattung sorgen.
+                        Dennoch empfehlen wir, Sonnenschutz einzupacken.
 
                         Für eine entspannte Zeremonie würden wir Euch bitten, die Handys in der Tasche zu lassen. Unsere 
                         Fotografin Ina wird den Moment für uns alle einfangen.
@@ -189,8 +190,8 @@
                         Dazu gibt es duftenden Kaffee und eine liebevolle Auswahl an köstlichen Kuchen.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Dinner ab <span class="time">17:30 Uhr</span></h5>
-                    <p>Nach einem wunderschönen Tag in der Parkanlage erwartet Euch ein stilvolles Dinner im Hochzeitspavillion.
+                    <h5>Dinner <span class="time">ab 17:30 Uhr</span></h5>
+                    <p>Nach einem wunderschönen Tag in der Parkanlage erwartet Euch ein stilvolles Dinner im Hochzeitspavillon.
                         Unser Dinner besteht aus einem 3-Gänge-Menü. 
                         Im Formular unten könnt Ihr uns individuelle Ernährungsbedürfnisse mitteilen.
                     </p>
@@ -497,7 +498,7 @@
         <p>
             Sollte es regnen, wird die Trauung und der Empfang in einem kleinen, 
             aber liebevoll gestalteten Nebengebäude stattfinden. 
-            Das Pavillon für das Abendprogramm ist wetterfest.
+            Der Pavillon für das Abendprogramm ist wetterfest.
         </p>
         <h5>Kann ich übernachten?</h5>
         <p>
@@ -514,7 +515,7 @@
         <h5>Kann ich mehrere Personen eintragen?</h5>
         <p>
             Selbstverständlich! Bitte informiere uns über das Formular unten, wenn Du eine Begleitung (+1) mitbringen möchtest.
-            Bei Familien reicht es natürlich, wenn eine Person die ganze Familie einträngt.
+            Bei Familien reicht es natürlich, wenn eine Person die ganze Familie einträgt.
         </p>
         <h5>Was soll ich schenken?</h5>
         <p>
