Add info to faq

--- a/index.html
+++ b/index.html
@@ -507,6 +507,9 @@
             Wir freuen uns, Euch am nächsten Morgen zu sehen!
             <br>
             Die Preise und Zimmerdetails findet Ihr <a href="https://gut-altholz.de/hotel/">hier</a>.
+            <br>
+            Sollte unser Zimmerkontingent nicht ausreichen, gibt es genügend günstige Übernachtungsmöglichkeiten in Deggendorf.
+            Solltet Ihr dies planen, lasst es uns gerne auch wissen. Wir können An- und Abfahrten mit Taxis organisieren.
         </p>
         <h5>Gibt es Parkplätze?</h5>
         <p>
